Added additional js functionality including database

--- a/main.html
+++ b/main.html
@@ -50,9 +50,9 @@
     <!-- the body of your page goes here -->
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4">Hello there!<span id="name-goes-here"></span></h1>
+            <h1 class="display-4">Hello there <span id="name-goes-here"></span>!</h1>
             <hr>
-            <p>Quote of the day: An apple a day, makes the doctors question your sanity.</p>
+            <p>Quote of the day: <span id="quote-goes-here"></span></p>
         </div>
 </div>
 
