--- a/index.html
+++ b/index.html
@@ -48,12 +48,23 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
-    <div class="container text-center py-4">
-        <div class="rounded-circle overflow-hidden">
-            <img class="responsive" src="./images/elmo.jpg" alt="">
+
+    
+
+<div class="px-4 pt-5 my-5 text-center border-bottom">
+    <div class="overflow-hidden" style="max-height: 30vh;">
+        <div class="container px-5">
+            <img src="images/aaronprofile.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
+                width="200" height="200" loading="lazy">
         </div>
-        <h1>Welcome to Aaron's Hiking App</h1>
-        <a href="login.html" class="btn btn-warning" role="button">Log in</a>
+    </div>
+    <h1 class="display-4 fw-bold">Welcome to my site!</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Join a fun hiking app and share your thoughts</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+            <a href="login.html" class="btn btn-warning" role="button">Log in</a>
+        </div>
+    </div>
 </div>
 
     <!-- our own footer goes here-->
